rudy-db/tests/snapshots/enum_type_resolution@aarch64-unknown-linux-gnu-4.snap
---
source: rudy-db/tests/static_tests.rs
expression: result_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Std(
        Result(
            ResultLayout {
                name: "Result<i32, alloc::string::String>",
                discriminant: Discriminant {
                    ty: UnsignedInt(
                        UnsignedIntLayout {
                            size: 8,
                        },
                    ),
                    offset: 0,
                },
                ok_type: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die(
                        Id(2c2d),
                    ),
                },
                ok_offset: 8,
                err_type: TypeDefinition {
                    layout: Std(
                        String(
                            StringLayout(
                                VecLayout {
                                    length_offset: 16,
                                    data_ptr_offset: 8,
                                    inner_type: TypeDefinition {
                                        layout: Primitive(
                                            UnsignedInt(
                                                UnsignedIntLayout {
                                                    size: 1,
                                                },
                                            ),
                                        ),
                                        location: Die(
                                            Id(2c39),
                                        ),
                                    },
                                },
                            ),
                        ),
                    ),
                    location: Die(
                        Id(2c32),
                    ),
                },
                err_offset: 0,
                size: 24,
            },
        ),
    ),
    location: Die(
        Id(2c21),
    ),
}
