rudy-db/tests/snapshots/enum_type_resolution@x86_64-apple-darwin-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: repr_c_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Enum(
        EnumLayout {
            name: "ReprCEnum",
            discriminant: Discriminant {
                ty: UnsignedInt(
                    UnsignedIntLayout {
                        size: 4,
                    },
                ),
                offset: 0,
            },
            variants: [
                EnumVariantLayout {
                    name: "Unit",
                    discriminant: Some(
                        0,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Unit",
                        },
                        location: Die(
                            Id(1847),
                        ),
                    },
                },
                EnumVariantLayout {
                    name: "Tuple",
                    discriminant: Some(
                        1,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Tuple",
                        },
                        location: Die(
                            Id(1848),
                        ),
                    },
                },
                EnumVariantLayout {
                    name: "Struct",
                    discriminant: Some(
                        2,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Struct",
                        },
                        location: Die(
                            Id(1849),
                        ),
                    },
                },
            ],
            size: 40,
        },
    ),
    location: Die(
        Id(1839),
    ),
}
