rudy-db/tests/snapshots/enum_type_resolution@x86_64-apple-darwin-3.snap
---
source: rudy-db/tests/static_tests.rs
expression: option_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Std(
        Option(
            OptionLayout {
                name: "Option<i32>",
                discriminant: Discriminant {
                    ty: UnsignedInt(
                        UnsignedIntLayout {
                            size: 4,
                        },
                    ),
                    offset: 0,
                },
                some_offset: 4,
                some_type: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/enums-cdc3bebaf4fbad4b.6tddask0mt1uzszm1v6fzrels.15x5wb4.rcgu.o 0x000008f1,
                },
                size: 8,
            },
        ),
    ),
    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/enums-cdc3bebaf4fbad4b.6tddask0mt1uzszm1v6fzrels.15x5wb4.rcgu.o 0x000003d2,
}
