rudy-db/tests/snapshots/enum_type_resolution@x86_64-apple-darwin.snap
---
source: rudy-db/tests/static_tests.rs
expression: test_enum_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Enum(
        EnumLayout {
            name: "TestEnum",
            discriminant: Discriminant {
                ty: UnsignedInt(
                    UnsignedIntLayout {
                        size: 8,
                    },
                ),
                offset: 0,
            },
            variants: [
                EnumVariantLayout {
                    name: "Unit",
                    discriminant: Some(
                        9223372036854775808,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Unit",
                        },
                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/enums-061f6db8dde826a1.9j92jqavkne4829mc4eb81ydc.1lxzu9j.rcgu.o 0x00000814,
                    },
                },
                EnumVariantLayout {
                    name: "Tuple",
                    discriminant: None,
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Tuple",
                        },
                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/enums-061f6db8dde826a1.9j92jqavkne4829mc4eb81ydc.1lxzu9j.rcgu.o 0x0000081c,
                    },
                },
                EnumVariantLayout {
                    name: "Struct",
                    discriminant: Some(
                        9223372036854775810,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Struct",
                        },
                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/enums-061f6db8dde826a1.9j92jqavkne4829mc4eb81ydc.1lxzu9j.rcgu.o 0x0000083d,
                    },
                },
            ],
            size: 32,
        },
    ),
    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/x86_64-apple-darwin/examples/enums-061f6db8dde826a1.9j92jqavkne4829mc4eb81ydc.1lxzu9j.rcgu.o 0x000007c8,
}
